--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#services">services</a>
+        <a href="#contact">Contact</a>
+        <a href="#Offers">offers</a>
+        <a href="#Customize Pizza">Customize Pizza</a>
+    </div>
 </body>
 
 </html>
