--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <link rel="stylesheet" href="styles.css">
 
+
 <body>
     <div class="topnav">
         <a class="active" href="#home">Home</a>
@@ -17,6 +18,7 @@
         <a href="#Offers">offers</a>
         <a href="#Customize Pizza">Customize Pizza</a>
     </div>
+    <img src="images/redhot.jpg" alt="pizza">
 </body>
 
 </html>
