--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
         <a href="#Offers">offers</a>
         <a href="#Customize Pizza">Customize Pizza</a>
     </div>
-    <img src="images/redhot.jpg" alt="pizza">
+    <style>
+        body {
+            background-image: url('/images/karthik-garikapati-oBbTc1VoT-0-unsplash.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    </style>
+
 </body>
 
 </html>
