link index.html with services

--- a/services.html
+++ b/services.html
@@ -7,11 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
-
+<link rel="stylesheet" href="styles.css">
 
 <body>
-    <img src="/images/gogreen.jpg" alt="green pizza">
+
+    <a href="/index.html"><i class="fa fa-fw fa-home"></i>Home<a>
+    <style>
+        body {
+            background-image: url('/images/mahyar-motebassem-pGA4zHvpo5E-unsplash.jpg');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+        }
+    </style>
+
 
 </body>
 
