--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <link rel="stylesheet" href="styles.css">
 
-
 <body>
+
     <div class="topnav">
+        <a href="./services.html"><i class="fa fa-fw fa-services"></i>services</a>
         <a class="active" href="#home">Home</a>
         <a href="#services">services</a>
         <a href="#contact">Contact</a>
