link html with services.html

--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <a href="/index.html"><i class="fa fa-fw fa-home"></i>Home<a>
+    <a href="/index.html"><i class="fa fa-fw fa-services"></i>services<a>
     <style>
         body {
             background-image: url('/images/mahyar-motebassem-pGA4zHvpo5E-unsplash.jpg');
