--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 
 <body>
 
-    <div class="topnav">
-        <a href="./services.html"><i class="fa fa-fw fa-services"></i>services</a>
-        <a class="active" href="#home">Home</a>
-        <a href="#services">services</a>
-        <a href="#contact">Contact</a>
+    <div class="topnav"><a href="./index.html"><i class="fa fa-fw fa-services"></i>Home</a>
+        <a href="./services.html">services</a>
+        <a href="./contact">Contact</a>
         <a href="#Offers">offers</a>
         <a href="#Customize Pizza">Customize Pizza</a>
     </div>
@@ -26,6 +24,11 @@
             background-size: cover;
         }
     </style>
+
+    <form>
+        <input value="cheese" name="pizzatype" type="radio" id="cheese"><label for="cheese">cheese</label>
+
+    </form>
 
 </body>
 
