--- a/services.html
+++ b/services.html
@@ -22,6 +22,21 @@
     </style>
 
 
+    <form>
+        <input value="sausage" name="pizzatype" type="radio" id="sausage"><label for="sausage">saugsage</label>
+        <input value="pepperoni" name="pizzatype" type="radio" id="pepperoni"><label for="pepperoni">pepperoni</label>
+        <input value="oninos" name="pizzatype"  type="radio"  id="oninos"><label for="oninos">onions</label>
+    </form>
+
+
+
+    <form 
+     <input value="mid-max" name="pizzasize" type="radio" id="mid-max"><label for="mid-max">mid-max</label>
+     <input value="large" name="pizzasize" type="radio" id="large"
+    
+    </form>
+
+
 </body>
 
 </html>
