add large pizza

--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@
 
     <form 
      <input value="mid-max" name="pizzasize" type="radio" id="mid-max"><label for="mid-max">mid-max</label>
-     <input value="large" name="pizzasize" type="radio" id="large"
+     <input value="large" name="pizzasize" type="radio" id="large"><label for="large">large</label>
     
     </form>
 
