add medium pizza

--- a/services.html
+++ b/services.html
@@ -33,8 +33,10 @@
     <form 
      <input value="mid-max" name="pizzasize" type="radio" id="mid-max"><label for="mid-max">mid-max</label>
      <input value="large" name="pizzasize" type="radio" id="large"><label for="large">large</label>
-    
+     <input value="medium" name="pizzasize" type="radio" id="medium"><label for="medium">medium</label
     </form>
+    
+
 
 
 </body>
