add div element

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             background-size: cover;
         }
     </style>
+    <form>
+        <input value="cheese" name="pizzatype" type="radio" id="cheese"><label for="cheese">cheese</label>
+
+    </form>
 
 
 
