--- a/services.html
+++ b/services.html
@@ -21,23 +21,29 @@
         }
     </style>
 
-
+<div class="toppings">
     <form>
         <input value="sausage" name="pizzatype" type="radio" id="sausage"><label for="sausage">saugsage</label>
         <input value="pepperoni" name="pizzatype" type="radio" id="pepperoni"><label for="pepperoni">pepperoni</label>
         <input value="oninos" name="pizzatype"  type="radio"  id="oninos"><label for="oninos">onions</label>
     </form>
+</div>
 
-
-
+<div class="sizes">
     <form 
      <input value="mid-max" name="pizzasize" type="radio" id="mid-max"><label for="mid-max">mid-max</label>
      <input value="large" name="pizzasize" type="radio" id="large"><label for="large">large</label>
      <input value="medium" name="pizzasize" type="radio" id="medium"><label for="medium">medium</label
     </form>
-    
 
-
+</div>
+div class="variety">
+    <form>
+        <input value="chicagopizza" name="pizzavariety" type="radio" id="chicagopizza"><label for="chicagopizza">chicagopizza</label>
+        <input value="greekpizza" name="pizzavariety" type="radio" id="greekpizza"><label for="pepperoni">pepperoni</label>
+        <input value="kenyanpizza" name="pizzavariety"  type="radio"  id="oninos"><label for="oninos">onions</label>
+    </form>
+</div>
 
 </body>
 
