add a welcome note

--- a/services.html
+++ b/services.html
@@ -31,17 +31,17 @@
 
 <div class="sizes">
     <form 
-     <input value="mid-max" name="pizzasize" type="radio" id="mid-max"><label for="mid-max">mid-max</label>
-     <input value="large" name="pizzasize" type="radio" id="large"><label for="large">large</label>
-     <input value="medium" name="pizzasize" type="radio" id="medium"><label for="medium">medium</label
-    </form>
+    <input value="large" name="pizzasize" type="radio" id="large"><label for="large">family</label>
+    <input value="family" name="pizzasize" type="radio" id="family"><label for="family">family</label>
+    <input value="mid-max" name="pizzasize"  type="radio"  id="mid-max"><label for="mid-max">mid-max</label>
+</form>
 
 </div>
-div class="variety">
+<div class="variety">
     <form>
         <input value="chicagopizza" name="pizzavariety" type="radio" id="chicagopizza"><label for="chicagopizza">chicagopizza</label>
-        <input value="greekpizza" name="pizzavariety" type="radio" id="greekpizza"><label for="pepperoni">pepperoni</label>
-        <input value="kenyanpizza" name="pizzavariety"  type="radio"  id="oninos"><label for="oninos">onions</label>
+        <input value="greekpizza" name="pizzavariety" type="radio" id="greekpizza"><label for="greekpizza">greekpizza</label>
+        <input value="kenyanpizza" name="pizzavariety"  type="radio"  id="kenyanpizza"><label for="kenyanpizza">kenyanpizza</label>
     </form>
 </div>
 
